Fix Tree arrow images. (#7343)
We used to render the arrows using an empty img
with a CSS mask. Due to some platform changes,
we now see a bit of the broken image asset,
which does not look great.

In order to fix that, we use buttons to render
the arrow, with a background-image, and context-fill
to style it.

--- a/packages/devtools-reps/src/object-inspector/index.css
+++ b/packages/devtools-reps/src/object-inspector/index.css
@@ -36,7 +36,7 @@
   color: var(--theme-comment);
 }
 
-.object-inspector .tree-node img.arrow {
+.object-inspector .tree-node .arrow {
   display: inline-block;
   vertical-align: middle;
 }
